[tool.poetry]
name = "askify"
version = "0.1.0"
description = ""
authors = ["4nemi <4nemi.aaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = "^0.0.271"
faiss-cpu = "^1.7.4"
openai = "^0.27.9"
tiktoken = "^0.4.0"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
